day5/02_helm/03_own_chart/python-api/templates/task/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-api
  labels:
    projekt: python
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/info
spec:
  ingressClassName: nginx
  rules:
  - host: python.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: python-service
            port:
              name: api
